--- a/App02/app/views/auth/signup.njk
+++ b/App02/app/views/auth/signup.njk
@@ -1,21 +1,6 @@
-<html>
+{% extends 'layouts/default.njk' %}
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Snippetfy | Save cód</title>
-  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="stylesheet" href="/dracula.css">
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-  <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-
-  <script src="/main.js"></script>
-</head>
-
-<body>
+{% block body%}
   <dir class="auth-wrapper">
     <form class="form-sigin" action="" method="post">
       <h1>Criar Conta</h1>
@@ -26,6 +11,4 @@
       <a href="/">Já tenho conta</a>
     </form>
   </dir>
-</body>
-
-</html>
+{%endblock%}
