--- a/App02/app/views/auth/signup.njk
+++ b/App02/app/views/auth/signup.njk
@@ -2,7 +2,7 @@
 
 {% block body%}
   <dir class="auth-wrapper">
-    <form class="form-sigin" action="" method="post">
+    <form class="form-sigin" action="/register" method="post">
       <h1>Criar Conta</h1>
       <input type="text" name="name" placeholder="Digite seu nome">
       <input type="email" name="email" placeholder="Digite seu e-mail">
