--- a/App02/app/views/layouts/default.njk
+++ b/App02/app/views/layouts/default.njk
@@ -15,6 +15,8 @@
   <script src="/main.js"></script>
 </head>
 <body>
+{% include 'partials/flash.njk' %}
+
   {% block body%} {%endblock%}
 </body>
 </html>
