--- a/App02/app/views/auth/signin.njk
+++ b/App02/app/views/auth/signin.njk
@@ -2,7 +2,7 @@
 
 {% block body%}
   <dir class="auth-wrapper">
-    <form class="form-sigin" action="" method="post">
+    <form class="form-sigin" action="/authenticate" method="post">
       <h1>Fazer Login</h1>
       <input type="email" name="email" placeholder="Digite seu e-mail">
       <input type="password" name="password" placeholder="Digite sua senha">
