--- a/App02/app/views/snippets/show.njk
+++ b/App02/app/views/snippets/show.njk
@@ -6,7 +6,7 @@
     <div class="actions">
       <a href="#" data-modal-open="#edit-snippet" class="edit">Editar</a>
 
-      <form action="" method="POST">
+      <form action="/app/categories/{{activeCat}}/snippets/{{currentSnippet.id}}_method=DELETE" method="POST">
         <button type="submit">Remover</button>
       </form>
     </div>
